# filefunc

./: CMakeLists.txt  README.md  main.cpp
filedeal/: CMakeLists.txt
filedeal/include/: file_deal_model.h
filedeal/source/: file_deal_model.cpp
tcpcomm/: CMakeLists.txt
tcpcomm/include/: tcp_comm_model.h
tcpcomm/source/: tcp_comm_model.cpp
