cmake_minimum_required(VERSION 3.5)
project(tcpcomm)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}  -Wl,-rpath=../lib")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g")
#
#添加全部.cpp文件
FILE(GLOB HEAD_LIST	${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include/*.h)
FILE(GLOB SRC_LIST	${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/source/*.cpp)

# 生成链接库
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/${LIB}/${PROJECT_NAME})
MESSAGE(STATUS "SOURCE_DIR:" ${LIB})
MESSAGE(STATUS "SOURCE_DIR:" ${CMAKE_SOURCE_DIR})
MESSAGE(STATUS "PROJECT_SOURCE_DIR:" ${PROJECT_SOURCE_DIR})


add_library(${PROJECT_NAME} STATIC ${SRC_LIST} ${HEAD_LIST})
